--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,4 +1,4 @@
-/* stylelint-disable selector-list-comma-newline-after */
+/* custom tags over and above provided by bootstrap */
 
 .blog-header {
   line-height: 1;
