--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block title %}My Blog{% endblock %}
 {% block app_content %}
-    <h1>My Blog - List of Blogs</h1>
+    <h1>My Journal</h1>
     <hr>
     {% for post in post_list %}
         <h2>
